<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:baselineAligned="true"
    android:foregroundTint="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foregroundTint="#FFFFFF"
        android:scrollbars="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adviseeMajor"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/major"
            android:inputType="text"
            android:maxLength="9"
            android:minHeight="48dp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/endButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editStudentId"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/addCourseMenuLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:minHeight="48dp"
            android:text="@string/advisorAddStudentMenuLabel"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toTopOf="@+id/editFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editFirstName"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/firstNameLabel"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editMiddleName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCourseMenuLabel"
            app:textInputLayoutFocusedRectEnabled="false" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editMiddleName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/middleNameLabel"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editLastName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editFirstName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/lastNameLabel"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editClassYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMiddleName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editClassYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/classYearLabel"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editStudentId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editLastName" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editStudentId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/studentIdLabel"
            android:inputType="number"
            android:maxLength="9"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/adviseeMajor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editClassYear" />

        <Button
            android:id="@+id/endButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:text="@string/doneLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adviseeMajor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>