<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authorizeView.AuthFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/signInButton"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:text="@string/register"
        app:layout_constraintEnd_toStartOf="@+id/signInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="233dp"
        android:layout_height="187dp"
        android:layout_marginTop="88dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/username_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/password_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>