<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollIndicators="right"
    android:scrollbarSize="6dp"
    android:scrollbars="vertical"
    tools:context=".view.advisorView.AdvisorMenuFrag">

    <Button
        android:id="@+id/addAdviseeButton4"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/maroon"
        android:fontFamily="sans-serif-medium"
        android:text="@string/add_advisee_button"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/deleteAdviseeButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerOfAdvisees" />

    <Button
        android:id="@+id/deleteAdviseeButton2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="63dp"
        android:background="@color/maroon"
        android:text="@string/remove_advisee_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAdviseeButton4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/containerOfAdvisees"
        android:layout_width="396dp"
        android:layout_height="338dp"
        android:layout_marginTop="13dp"
        android:clickable="true"
        android:clipChildren="true"
        android:contextClickable="false"
        android:scrollIndicators="right"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toTopOf="@+id/addAdviseeButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advisees"
        tools:listitem="@android:layout/activity_list_item" />

    <TextView
        android:id="@+id/advisees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/adviseeListTextView"
        app:layout_constraintBottom_toTopOf="@+id/containerOfAdvisees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>