...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editStudentId2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/studentIdLabel"
            android:inputType="number"
            android:maxLength="9"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColorHint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addAdviseeMenuLabel2" />

        <TextView
...
