<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:baselineAligned="false"
    android:foregroundTint="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:foregroundTint="#FFFFFF"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/addCourseMenuLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:text="@string/addCourseMenuLabel"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="412dp"
            android:layout_height="442dp"
            android:layout_marginTop="88dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addCourseMenuLabel">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editfirstNameLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCourseID"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:background="@color/white"

                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/editCourseID"
                    android:maxLength="7"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/middleNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColorHint="@color/black">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColorHint="@color/black">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:textColorHint="@color/black">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="horizontal"
                                    android:layout_gravity="center">

                                    <CheckBox
                                        android:id="@+id/thursday"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/thursday" />

                                    <CheckBox
                                        android:id="@+id/friday"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="1"
                                        android:text="@string/friday" />
                                </LinearLayout>

                                <Button
                                    android:id="@+id/doneButton3"
                                    android:layout_width="match_parent"
                                    android:layout_height="121dp"
                                    android:layout_weight="1"
                                    android:text="@string/doneLabel" />




                            </com.google.android.material.textfield.TextInputLayout>

                        </com.google.android.material.textfield.TextInputLayout>
                    </com.google.android.material.textfield.TextInputLayout>

                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>