<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/createPoolButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Pool"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="179dp" />

    <Button
        android:id="@+id/addCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Course" />

    <Button
        android:id="@+id/editPool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Pool"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="88dp" />

</androidx.constraintlayout.widget.ConstraintLayout>